@@ -1,3 +1,10 @@
+2003-12-31  Junichi Uekawa  <dancer@debian.org>
+
+	* Documentation/pbuilder-doc.xml: updated doc so that user-mode-linux is 
+	no longer in the experimental section of the documentation.
+	A new faq entry on 'pbuilder is slow', to recomment using pbuilder-uml when 
+	the user thinks tar is slow.
+
 2003-12-30  Junichi Uekawa  <dancer@debian.org>
 
 	* Documentation/pbuilder-doc.xml (EXTRAPACKAGES): Document apt-proxy is usable as a proxy.
